# otok-api

./: LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release-mcp.yml  release-sdk-node.yml  release-sdk-python.yml  wordpress-plugin-ci.yml
docs/: openapi.yaml
docs/api/: README.md  bookings.md  campaigns.md  consent-and-suppressions.md  contacts.md  deals.md  email-campaigns.md  emails.md  getting-started.md  newsletters.md  orders.md  payment-requests.md  payments.md  products.md  tags-and-groups.md  templates.md  webhooks.md
integrations/wordpress/: .gitignore  .wp-env.json  README.md  composer.json  phpcs.xml.dist
integrations/wordpress/otok-for-woocommerce/: otok-for-woocommerce.php  readme.txt  uninstall.php
integrations/wordpress/otok-for-woocommerce/assets/css/: admin.css
integrations/wordpress/otok-for-woocommerce/assets/js/: admin.js  checkout.js
integrations/wordpress/otok-for-woocommerce/includes/: class-otok-wc-cart-events.php  class-otok-wc-connect.php  class-otok-wc-consent.php  class-otok-wc-credentials.php  class-otok-wc-delivery.php  class-otok-wc-guest-email.php  class-otok-wc-order-events.php  class-otok-wc-outbox.php  class-otok-wc-payloads.php  class-otok-wc-plugin.php
integrations/wordpress/otok-for-woocommerce/includes/admin/: class-otok-wc-admin.php
integrations/wordpress/otok-for-woocommerce/languages/: otok-for-woocommerce-he_IL.l10n.php  otok-for-woocommerce-he_IL.mo  otok-for-woocommerce-he_IL.po  otok-for-woocommerce.pot
mcp/: .gitignore  README.md  package.json  tsconfig.json
mcp/src/: http.ts  index.ts  server.ts
mcp/src/tools/: email-campaigns.ts  index.ts  newsletters.ts  shared.ts
mcp/test/: http.test.ts  tools.test.ts
scripts/: build-docs-site.mjs
sdk/node/: README.md  RELEASING.md  package-lock.json  package.json  tsconfig.json
sdk/node/examples/: export-contacts.mjs  express-webhook-receiver.mjs  track-order.mjs
sdk/node/src/: client.ts  commerce.ts  errors.ts  http.ts  index.ts  resources.ts  types.ts  webhooks.ts
sdk/node/test/: commerce.test.ts  email-content.test.ts  http.test.ts  pagination.test.ts  resources.test.ts  webhooks.test.ts
sdk/python/: .gitignore  README.md  RELEASING.md  pyproject.toml
sdk/python/examples/: django_webhook_receiver.py  export_contacts.py  fastapi_webhook_receiver.py  flask_webhook_receiver.py  track_order.py
sdk/python/src/otok/: __init__.py  _http.py  client.py  commerce.py  errors.py  resources.py  types.py  webhooks.py
sdk/python/tests/: helpers.py  test_commerce.py  test_http.py  test_pagination.py  test_resources.py  test_webhooks.py
(+1 files in other folders)
