[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otok"
dynamic = ["version"]
description = "Official Python SDK for the oToK marketing platform public API (/v1) — contacts, deals, transactional email, webhooks, and a high-level e-commerce layer."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "oToK" }]
keywords = [
  "otok",
  "marketing",
  "crm",
  "sdk",
  "api-client",
  "e-commerce",
  "webhooks",
  "transactional-email",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Pins keep dev tooling compatible with the package's 3.9 floor:
# mypy 2.x cannot target python_version = 3.9, and pytest 9.x sources use
# 3.10+ syntax that mypy would refuse to analyze under the 3.9 target.
# ruff is bounded so a future release adding rules cannot turn CI red
# without a code change.
dev = ["pytest>=7.4,<9", "ruff>=0.5,<0.16", "mypy>=1.10,<2"]

[project.urls]
Homepage = "https://github.com/SlikkDev/otok-api/tree/main/sdk/python#readme"
Repository = "https://github.com/SlikkDev/otok-api"
Issues = "https://github.com/SlikkDev/otok-api/issues"

[tool.hatch.version]
path = "src/otok/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/otok"]

[tool.hatch.build.targets.sdist]
# Patterns are anchored ("/...") so stray files at other depths in a
# maintainer's working tree can never leak into a published sdist.
include = ["/src/otok", "/tests", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.ruff.lint.pyupgrade]
# Keep typing.List/Optional/Union spellings: annotations here are also read
# at runtime (TypedDict introspection, casts) and the package supports 3.9.
keep-runtime-typing = true

[tool.ruff.lint.isort]
known-first-party = ["otok"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/otok", "tests"]
